--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,8 +13,6 @@ header {
 }
 #navbar{
     background-color: #f5f4f4;
-    background-color: #080200;
-    color: #f5f4f4;
 }
 #logoeberdevis {
     display: flex;
@@ -26,8 +24,6 @@ header {
     text-decoration:none
     top 0;
     margin-left:auto;
-    background-color: #080200;
-    color: #f5f4f4;
 }
 .menu {
     list-style: none;
@@ -150,7 +146,7 @@ h2 {
   .card p {
     margin-top: 5px;
   }
-#perfiles1 {
+/*#perfiles1 {
     display: flex;
     flex: 1;
     margin: 10px;
@@ -175,7 +171,7 @@ h2 {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0,1);
     display: inline-block
-}
+}*/
 main {
     padding: 20px;
     max-width: 1200px;
@@ -187,5 +183,26 @@ footer{
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
-
+    background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
 }
+.enlaces3 {
+    text-decoration:none;
+    list-style-type: none;
+}
+.instagram-icon {
+    color: #060003; /* Color del icono de Instagram */
+    font-size: 20px; /* Tamaño del icono */
+    text-decoration: none; /* Elimina la subrayado del enlace */
+  }
+  .facebook-icon {
+    color: #060003; /* Color del icono de Instagram */
+    font-size: 20px; /* Tamaño del icono */
+    text-decoration: none; /* Elimina la subrayado del enlace */
+  }
+  .gmail-icon {
+    color: #060003; /* Color del icono de Instagram */
+    font-size: 20px; /* Tamaño del icono */
+    text-decoration: none; /* Elimina la subrayado del enlace */
+  }
