--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,17 +107,6 @@ h2 {
 .mapa {
     justify-content:center;
 }
-/*
-.card-body {
-    display: flex;  
-    background-color: #f5f4f4;
-    border: 1px solid #01090f;
-    border-radius: 8px;
-   flex-direction: column;
-}
-.container {
-    display: flex;
-} */
 .whatsapp-icon {
     position: fixed;
     bottom: 20px;
@@ -146,32 +135,7 @@ h2 {
   .card p {
     margin-top: 5px;
   }
-/*#perfiles1 {
-    display: flex;
-    flex: 1;
-    margin: 10px;
-    padding: 10px;
-    width: 250px;
-    height: 275px;
-    border: solid 1px #080200;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0,1);
-    display: inline-block
-    
-}
 
-#perfiles2 {
-    display: flex;
-    flex: 1;
-    margin: 10px;
-    padding: 10px;
-    width: 250px;
-    height: 275px;
-    border: solid 1px #080200;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0,1);
-    display: inline-block
-}*/
 main {
     padding: 20px;
     max-width: 1200px;
@@ -184,25 +148,47 @@ footer{
     max-width: 1200px;
     margin: 0 auto;
     background-color: #f2f2f2;
-  padding: 20px;
-  text-align: center;
+  text-align: start;
 }
 .enlaces3 {
     text-decoration:none;
     list-style-type: none;
 }
+
 .instagram-icon {
-    color: #060003; /* Color del icono de Instagram */
-    font-size: 20px; /* Tamaño del icono */
-    text-decoration: none; /* Elimina la subrayado del enlace */
+    color: #060003; 
+    font-size: 20px; 
+    text-decoration: none; 
   }
   .facebook-icon {
-    color: #060003; /* Color del icono de Instagram */
-    font-size: 20px; /* Tamaño del icono */
-    text-decoration: none; /* Elimina la subrayado del enlace */
+    color: #060003; 
+    font-size: 20px; 
+    text-decoration: none; 
   }
   .gmail-icon {
-    color: #060003; /* Color del icono de Instagram */
-    font-size: 20px; /* Tamaño del icono */
-    text-decoration: none; /* Elimina la subrayado del enlace */
+    color: #060003; 
+    font-size: 20px; 
+    text-decoration: none; 
+
   }
+
+  @media (max-width: 980px) {
+    body .btn-link {
+      text-shadow: none !important;
+    }
+  }
+  @media (max-width: 767px) {
+    body .btn-link {
+      text-shadow: none !important;
+    }
+  }
+  @media (max-width: 480px) {
+    body .btn-link {
+      text-shadow: none !important;
+    }
+  }
+  @media (min-width: 1200px) {
+    body {
+      text-shadow:none;
+    }
+}
