--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,287 +1,346 @@
-
 header {
-    display: flex;
-    align-items:center;
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    justify-content: space-between;
-   background:#f5f4f4 ;
-    /*position:sticky;
-    top: 0;
-    */
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  justify-content: space-between;
+  background: #f5f4f4;
 }
-#navbar{
-    background-color: #f5f4f4;
+
+#navbar {
+  background-color: #f5f4f4;
 }
+
 #logoeberdevis {
-    display: flex;
-    margin-right: auto;
-
-}
-#navegacion-principal:hover{
-   display: flex;
-    text-decoration:none
-    top 0;
-    margin-left:auto;
-}
-.menu {
-    list-style: none;
-    color: #080200;
+  display: flex;
+  margin-right: auto;
+  height: 100px;
+  width: 105;
 }
 
-.menu1 {
-    text-decoration: none;
-    color: #080200;
-
-}
-.menu1:hover {
-    text-decoration: #080200;
-
-}
-#titulo {
-display: flex;
-align-items: center;
-}
-*{
-    padding: 0;
-    margin: 0;
+#navegacion-principal:hover {
+  display: flex;
+  text-decoration: none top 0;
+  margin-left: auto;
 }
 
+@media (min-width: 768px) and (max-width: 1200px) {
+  nav ul {
+    flex-direction: column;
+  }
+  nav ul li {
+    margin: 5px 0;
+  }
+}
 body {
-    background-image:url(../imagenes/fondo.svg);
-    text-decoration: none;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
+  background-image: url(../imagenes/fondo.svg);
+  text-decoration: none;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
 }
 
-p{
-    color:#12110c;
-    text-decoration: none;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
-    justify-content: center;
-   
+p {
+  color: #12110c;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  justify-content: center;
 }
-@media (max-width:450px) {
-    body {
-        background-color: #010508;
-    }
+
+@media (max-width: 450px) {
+  body {
+    background-color: #010508;
+  }
 }
-.parrafonosotros {
-    justify-content: center;
+* {
+  padding: 0;
+  margin: 0;
 }
+
 h1 {
-    display: flex;
-    margin: 10px 0px;
-    border-bottom: solid 2px #080200;
-    justify-content: center;    
+  display: flex;
+  margin: 10px 0px;
+  border-bottom: solid 2px #080200;
+  justify-content: center;
 }
+
 h2 {
-    display: flex;    
+  display: flex;
 }
+
 h3 {
+  display: flex;
+  margin: 10px 0px;
+  border-bottom: solid 2px #080200;
+  justify-content: center;
+}
+
+main {
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+@media (min-width: 601px) and (max-width: 1499px) {
+  main section {
+    padding: 10px;
+  }
+}
+@media (min-width: 1569px) {
+  main {
     display: flex;
-    margin: 10px 0px;
-    border-bottom: solid 2px #080200;
-    justify-content: center; 
-}
-#carouselExampleIndicators {
-    padding: 20px;
-    border-bottom: solid 2px #010508;
-}
-#mapa {
-    text-align:justify;
+    flex-wrap: wrap;
+  }
+  main section {
+    flex: 1;
+    min-width: 300px;
+    margin: 10px;
+  }
 }
 .whatsapp-icon {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+}
+
+.card-container {
+  display: flex;
+  padding: 100px;
+}
+
+.card {
+  width: 300px;
+  border: 1px solid black;
+  padding: 5%;
+  margin-right: 10px;
+}
+.card img {
+  width: 100%;
+  height: auto;
+}
+.card h3 {
+  margin-top: 10px;
+}
+.card p {
+  margin-top: 6px;
+}
+.card .btn.btn-primary {
+  text-align: center;
+}
+
+.form-container {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+}
+
+h5 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #555;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.submit-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #5cb85c;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.submit-btn:hover {
+  background-color: #449d44;
+}
+
+.carousel-inner {
+  width: 1000px;
+  height: 1000px;
+}
+
+.fotofrentetaller {
+  width: 1155px;
+  height: 500px;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .card-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media (min-width: 481px) and (max-width: 600px) {
+  .card-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media (min-width: 601px) and (max-width: 767) {
+  .card-container {
+    flex-direction: column;
+  }
 }
 .grid-container-servicios {
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    grid-template-rows: 3fr;
-    column-gap: 10px;
-    row-gap: 10px;
-    margin: 10px 10px 50px 10px;  
-  }
-  
-  .grid-container-servicios img {
-    height: 100%;
-    width: 100%;
-  }
-.video-service { 
-    border-top: solid 2px #010508;
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  grid-template-rows: 3fr;
+  column-gap: 10px;
+  row-gap: 10px;
+  margin: 10px 10px 50px 10px;
 }
-  @media only screen and (max-width: 700px) { .grid-servicios-1 {
+.grid-container-servicios img {
+  height: 100%;
+  width: 100%;
+}
+
+.video-service {
+  border-top: solid 2px #010508;
+}
+
+.presupuesto {
+  width: 1000px;
+  height: 1000px;
+}
+
+@media only screen and (max-width: 700px) {
+  .grid-servicios-1 {
     grid-column-start: 2;
     grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: 3;
   }
-
   .grid-servicios-2 {
     grid-column-start: 2;
     grid-column-end: 8;
     grid-row: 0 1;
   }
-
   .grid-servicios-3 {
     grid-column-start: 5;
     grid-column-end: 8;
     grid-row: 2 3;
   }
 }
-.portada-productos {
-    display: flex;
-    flex: wrap;
-    justify-content: center;
-}
-
-@media (min-width:320px) and (max-width:480px){
-.portada-productos {
-    flex-direction: column;
-}
-}
-
-
-.card-container {
-    display: flex;
-    padding: 100px;
-  }
-  
-  .card {
-    width: 300px;
-    border: 1px solid black;
-    padding: 5%;
-    margin-right: 10px;
-  }
-  
-  .card img {
-    width: 100%;
-    height: auto;
-  }
-
-  .card h3 {
-    margin-top: 10px;
-  }
-  
-  .card p {
-    margin-top: 6px;
-  }
-.btn.btn-primary {
-    text-align: center;
-}
-main {
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
 .gallery-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 10px;
-    width: 80%;
-    max-width: 1200px;
-  }
-  
-  .gallery-item img {
-    width: 100%;
-    height: auto;
-    display: block;
-    
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+  width: 80%;
+  max-width: 1200px;
+}
+.gallery-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
 
-footer{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-decoration: none;
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    background-color: #f2f2f2;
+.portada-productos {
+  display: flex;
+  flex: wrap;
+  text-align: center;
+  width: 350px;
+  height: 350px;
+}
+
+@media (max-width: 480px) {
+  .portada-productos {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media (min-width: 481px) and (max-width: 600px) {
+  .portada-productos {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media (min-width: 601px) and (max-width: 767) {
+  .portada-productos {
+    flex-direction: column;
+  }
+}
+#fotobebe {
+  display: flex;
+  gap: 10px;
+  width: 80%;
+  max-width: 1200px;
+  justify-content: center;
+  width: 1155px;
+  height: 500px;
+}
+#fotobebe img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+footer {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-decoration: none;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
   text-align: start;
 }
-.enlaces3 {
-    text-decoration:none;
-    list-style-type: none;
-}
-.instagram-icon {
-    color: #060003; 
-    font-size: 20px; 
-    text-decoration: none; 
-  }
-  .facebook-icon {
-    color: #060003; 
-    font-size: 20px; 
-    text-decoration: none; 
-  }
-  .gmail-icon {
-    color: #060003; 
-    font-size: 20px; 
-    text-decoration: none; 
 
-  }
-  @media (min-width:320px) and (max-width: 480px) {
-    .portada-productos {
-        flex-direction: column;
-        text-align: center;
-    }
-  }
-  @media (min-width:481px) and (max-width:600px) {
-    .portada-productos {
-        flex-direction:column;
-        text-align: center;
-    }
-  }
-  @media (min-width:601px) and (max-width:767) {
-    .portada-productos {
-        flex-direction:column;
-    }
-  }
-  @media (min-width:320px) and (max-width: 480px) {
-    .card-container {
-        flex-direction: column;
-        text-align: center;
-    }
-  }
-  @media (min-width:481px) and (max-width:600px) {
-    .card-container {
-        flex-direction:column;
-        text-align: center;
-    }
-  }
-  @media (min-width:601px) and (max-width:767) {
-    .card-container {
-        flex-direction:column;
-    }
-  }
-  @media  (min-width:768px) and (max-width: 1200px) {
-    nav ul {
-        flex-direction: column;
-    }
-    nav ul li {
-        margin: 5px 0;
-    }
+.enlaces3 {
+  text-decoration: none;
+  list-style-type: none;
 }
-@media (min-width: 601px) and (max-width: 1499px) {
-    main section {
-        padding: 10px;
-    }
+
+.instagram-icon {
+  color: #060003;
+  font-size: 20px;
+  text-decoration: none;
 }
-@media (min-width: 1569px) {
-    main {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    main section {
-        flex: 1;
-        min-width: 300px;
-        margin: 10px;
-    }
+
+.facebook-icon {
+  color: #060003;
+  font-size: 20px;
+  text-decoration: none;
 }
- 
+
+.gmail-icon {
+  color: #060003;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.enlaces3 {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+/*# sourceMappingURL=style.css.map */
