--- a/SCSS/_nosotros.scss
+++ b/SCSS/_nosotros.scss
@@ -1,11 +1,8 @@
 #fotobebe {
-    display: flex;
-    gap: 10px;
-    width: 80%;
-    max-width: 1200px;
-    justify-content: center;
-    width:1155px; 
-    height:500px;
+      max-width: 80%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
     
 img {
     width: 100%;
