--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,8 +15,8 @@ header {
 #logoeberdevis {
   display: flex;
   margin-right: auto;
-  height: 100px;
-  width: 105;
+  width: 100px;
+  height: 105px;
 }
 
 #navegacion-principal:hover {
@@ -162,6 +162,13 @@ textarea {
   height: 500px;
 }
 
+#carouselExampleIndicators {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 .grid-container-servicios {
   display: grid;
   grid-template-columns: repeat(3, 3fr);
@@ -197,6 +204,51 @@ textarea {
   display: block;
 }
 
+#serviciosed {
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: center;
+}
+
+.box-servicios {
+  border: 2px double #020b55;
+  border-radius: 5px;
+  background-color: rgba(250, 251, 253, 0.6);
+  color: #0c0606;
+  font-size: 15px;
+  font-family: "roboto-regular";
+  text-align: center;
+  padding: 2%;
+  margin: 10px;
+  width: 1200px;
+}
+
+.servicioimg {
+  float: center;
+  width: 200px;
+  height: 200px;
+}
+
+.instalacionimg {
+  float: center;
+  width: 200px;
+  height: 200px;
+}
+
+.repuestosimg {
+  float: center;
+  width: 200px;
+  height: 200px;
+}
+
+.parrafoindex {
+  margin-top: 10px;
+  font-size: 15px;
+  color: black;
+  font-size: 15px;
+  font-family: "roboto-regular";
+}
+
 .portada-productos {
   display: flex;
   flex: wrap;
@@ -206,13 +258,10 @@ textarea {
 }
 
 #fotobebe {
-  display: flex;
-  gap: 10px;
-  width: 80%;
-  max-width: 1200px;
-  justify-content: center;
-  width: 1155px;
-  height: 500px;
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 #fotobebe img {
   width: 100%;
@@ -256,6 +305,122 @@ footer {
 .enlaces3 {
   text-decoration: none;
   list-style-type: none;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .card-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .card-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media (min-width: 601px) and (max-width: 767) {
+  .card-container {
+    flex-direction: column;
+  }
+}
+@media (max-width: 480px) {
+  body {
+    background-color: #010508;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (min-width: 601px) and (max-width: 1499px) {
+  main section {
+    padding: 10px;
+  }
+}
+@media (min-width: 1600px) {
+  main {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  iframe {
+    width: 70%;
+  }
+  main section {
+    flex: 1;
+    min-width: 300px;
+    margin: 10px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1500px) {
+  nav ul {
+    flex-direction: column;
+  }
+  nav ul li {
+    margin: 5px 0;
+  }
+  .fotofrentetaller {
+    width: 100%;
+    height: 100%;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .portada-productos {
+    display: none;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .grid-servicios-1 {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .grid-servicios-2 {
+    grid-column-start: 2;
+    grid-column-end: 8;
+    grid-row: 0 1;
+  }
+  .grid-servicios-3 {
+    grid-column-start: 5;
+    grid-column-end: 8;
+    grid-row: 2 3;
+  }
+}
+@media (max-width: 768px) {
+  .container-fluid {
+    display: none;
+  }
+  .box-servicios {
+    width: 500px;
+    text-align: center;
+  }
+  .fotofrentetaller {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 480) {
+  #fotobebe {
+    width: 500px;
+    height: 200px;
+  }
+  .box-servicios {
+    width: 350px;
+  }
+  .fotofrentetaller {
+    width: 500px;
+    height: 200px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
