--- a/SCSS/_icono.scss
+++ b/SCSS/_icono.scss
@@ -2,6 +2,5 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 50px;
-    height: 50px;
-  }
+    @include tamano (50px, 50px)
+}
