--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -5,7 +5,7 @@
     }
   }
   
-  @media (min-width:481px) and (max-width:600px) {
+  @media (min-width:481px) and (max-width:768px) {
     .card-container {
       flex-direction: column;
       text-align: center;
@@ -17,9 +17,13 @@
       flex-direction: column;
     }
   }
-  @media (max-width:450px) {
+  @media (max-width:480px) {
     body {
       background-color: #010508;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
     }
   }
 
@@ -29,10 +33,13 @@
     }
   }
   
-  @media (min-width: 1569px) {
+  @media (min-width: 1600px) {
     main {
       display: flex;
       flex-wrap: wrap;
+    }
+    iframe {
+      width: 70%;
     }
   
     main section {
@@ -41,7 +48,7 @@
       margin: 10px;
     }
   }
-  @media (min-width:768px) and (max-width: 1200px) {
+  @media (min-width:768px) and (max-width: 1500px) {
     nav ul {
       flex-direction: column;
     }
@@ -49,27 +56,28 @@
     nav ul li {
       margin: 5px 0;
     }
+    .fotofrentetaller {
+      width: 100%;
+      height: 100%;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
+
   }
 
-  @media (max-width: 480px) {
+
+  @media (max-width:768px) {
     .portada-productos {
-      flex-direction: column;
-      text-align: center;
+     display: none;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
     }
   }
   
-  @media (min-width:481px) and (max-width:600px) {
-    .portada-productos {
-      flex-direction: column;
-      text-align: center;
-    }
-  }
-  
-  @media (min-width:601px) and (max-width:767) {
-    .portada-productos {
-      flex-direction: column;
-    }
-  }
   
   @media only screen and (max-width: 700px) {
     .grid-servicios-1 {
@@ -91,3 +99,32 @@
       grid-row: 2 3;
     }
   }
+  @media (max-width:768px){
+
+  .container-fluid {
+    display: none;
+  } 
+
+.box-servicios {
+  width: 500px;
+  text-align: center;
+}
+.fotofrentetaller {
+  width: 100%;
+   height: 100%;
+   text-align: center;
+}
+  }
+  @media only screen and (max-width:480) {
+    #fotobebe {
+    width:500px; 
+    height:200px;
+    }
+    .box-servicios {
+      width: 350px;
+  }
+  .fotofrentetaller {
+    width: 500px;
+     height: 200px
+  }
+}
