--- a/SCSS/_tarjetas.scss
+++ b/SCSS/_tarjetas.scss
@@ -1,6 +1,6 @@
 
 .card-container {
-    display: flex;
+    display:flex;
     padding: 100px;
   }
   
@@ -63,4 +63,9 @@ textarea {
    height: 500px
 }
 
- 
+#carouselExampleIndicators {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
