--- a/SCSS/_tarjetas.scss
+++ b/SCSS/_tarjetas.scss
@@ -2,6 +2,8 @@
 .card-container {
     display:flex;
     padding: 100px;
+    justify-content: center;
+    align-items: center;
   }
   
   .card {
