--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -8,7 +8,8 @@ $map: (
 $colors: (
   Instagram: #470147ee,
   Facebook:rgba(9, 50, 87, 0.933),
-  Send-mail:rgba(201, 152, 6, 0.933)
+  Send-mail:rgba(201, 152, 6, 0.933),
+  background: #f5f4f4
 
 );
 
