--- a/SCSS/_body.scss
+++ b/SCSS/_body.scss
@@ -46,6 +46,9 @@ main {
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #formularioturnos {
   display: flex;
