--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -9,7 +9,7 @@ $colors: (
   Instagram: #470147ee,
   Facebook:rgba(9, 50, 87, 0.933),
   Send-mail:rgba(201, 152, 6, 0.933),
-  background: #f5f4f4
+  backgrounds: #f5f4f4
 
 );
 
@@ -17,7 +17,7 @@ $colors: (
 {
   width:$width;
   height:$height;
-}
+};
 
 $form-background-color: #f9f9f9;
 $form-border-color: #ccc;
