--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,10 @@ header {
   background: #f5f4f4;
 }
 
+#navbar {
+  background-color: #f5f4f4;
+}
+
 #logoeberdevis {
   display: flex;
   margin-right: auto;
@@ -210,6 +214,7 @@ textarea {
   display: grid;
   grid-template-columns: auto;
   justify-content: center;
+  align-items: center;
 }
 
 .box-servicios {
@@ -222,7 +227,7 @@ textarea {
   text-align: center;
   padding: 2%;
   margin: 10px;
-  width: 1200px;
+  width: 90%;
 }
 
 .servicioimg {
@@ -253,9 +258,8 @@ textarea {
 
 .portada-productos {
   display: flex;
+  flex: wrap;
   text-align: center;
-  width: 350px;
-  height: 350px;
 }
 
 #fotobebe {
@@ -274,15 +278,10 @@ footer {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-decoration: none;
   padding: 20px;
-  max-width: 1200px;
+  max-width: 90%;
   margin: 0 auto;
   background-color: #f2f2f2;
   text-align: start;
-}
-
-.enlaces3 {
-  text-decoration: none;
-  list-style-type: none;
 }
 
 .instagram-icon {
@@ -374,11 +373,19 @@ footer {
 }
 @media (max-width: 768px) {
   .portada-productos {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
   }
   iframe {
     width: 100%;
     height: 100%;
+  }
+  img {
+    width: 80%;
+    justify-content: center;
   }
 }
 @media only screen and (max-width: 700px) {
@@ -424,6 +431,9 @@ footer {
   .fotofrentetaller {
     width: 500px;
     height: 200px;
+  }
+  .portada-productos {
+    flex-direction: column;
   }
 }
 
