--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -2,15 +2,10 @@ footer {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
     padding: 20px;
-    max-width: 1200px;
+    max-width: 90%;
     margin: 0 auto;
     background-color: #f2f2f2;
     text-align: start;
-  }
-  
-  .enlaces3 {
-    text-decoration: none;
-    list-style-type: none;
   }
   
   .instagram-icon {
