--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -15,7 +15,6 @@
   .video-service {
     border-top: solid 2px #010508;
     width: 90%;
-
   }
   .presupuesto {
   width:1000px ;
@@ -39,6 +38,7 @@
   display: grid;
   grid-template-columns: auto;
   justify-content: center;
+  align-items: center;
 }
 
 .box-servicios {
@@ -51,7 +51,8 @@
   text-align: center;
   padding: 2%;
   margin: 10px;
-  width: 1200px;
+  width: 90%;
+  
 }
 .servicioimg {
   float: center;
