--- a/SCSS/_tarjetas.scss
+++ b/SCSS/_tarjetas.scss
@@ -7,8 +7,8 @@
   }
   
   .card {
-    width: 300px;
-    border: 1px solid black;
+    width: 33%;
+    border: 3px solid black;
     padding: 5%;
     margin-right: 10px;
   
