--- a/CSS/style.css
+++ b/CSS/style.css
@@ -115,6 +115,11 @@ main {
 .card {
   width: 33%;
   border: 3px solid black;
+  border-radius: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 5%;
   margin-right: 10px;
 }
