--- a/SCSS/_tarjetas.scss
+++ b/SCSS/_tarjetas.scss
@@ -9,6 +9,11 @@
   .card {
     width: 33%;
     border: 3px solid black;
+    border-radius: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 5%;
     margin-right: 10px;
   
